Improve mobile nav and model loading

--- a/index.html
+++ b/index.html
@@ -15,13 +15,6 @@
     <!-- Scroll Progress Indicator -->
     <div class="scroll-progress" id="scrollProgress"></div>
     
-    <!-- Language Toggle -->
-    <div class="language-toggle">
-        <button id="langToggle" class="lang-btn" aria-label="Toggle language" aria-pressed="false">
-            <span class="lang-text" data-en="EN" data-zh="中文">中文</span>
-        </button>
-    </div>
-
     <!-- Navigation -->
     <nav class="navbar" id="navbar" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
@@ -52,6 +45,7 @@
             </div>
         </div>
     </nav>
+    <div class="nav-overlay" id="navOverlay" aria-hidden="true"></div>
 
     <!-- Hero Section -->
     <section id="home" class="hero">
