Update 'Higher Precision' text and add footer quote

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <div class="feature-icon"><i class="fas fa-bullseye"></i></div>
                             <div class="feature-content">
                                 <h3 data-en="Higher Precision" data-zh="精度更高">精度更高</h3>
-                                <p data-en="AI-powered algorithms ensure accurate measurements and optimal implant placement" data-zh="AI驱动的算法确保精确测量和最佳种植体放置">AI驱动的算法确保精确测量和最佳种植体放置</p>
+                                <p data-en="AI-powered algorithms ensure accurate measurements and optimal implant placement" data-zh="AI算法助力精准测量，确保种植体放置达到更优效果">AI算法助力精准测量，确保种植体放置达到更优效果</p>
                             </div>
                         </div>
                         <div class="feature-item">
@@ -317,6 +317,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 北京大学第二诊部. All rights reserved.</p>
+                <p class="footer-quote">"beijing daxue di er chenbu"</p>
             </div>
         </div>
     </footer>
