--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 北京大学第二诊部. All rights reserved.</p>
-                <p class="footer-quote">"beijing daxue di er chenbu"</p>
+                <p class="footer-quote">"北京大学第二诊部"</p>
             </div>
         </div>
     </footer>
