Quote clinic name and rights sentences across footer; remove extra footer-quote

--- a/index.html
+++ b/index.html
@@ -311,13 +311,12 @@
             <div class="footer-content">
                 <div class="footer-logo">
                     <img src="assets/icon.png" alt="Dental Implant System Logo" class="footer-logo-img" loading="lazy">
-                    <p data-en="Peking University Second Clinic" data-zh="北京大学第二诊部">北京大学第二诊部</p>
-                    <p class="footer-rights" data-en="Rights: Tsinghua University Dushi College - Data-Driven Personalized Dental Implant Group 1" data-zh="版权所有：清华大学笃实书院-数据驱动的个性化牙齿种植第一组">版权所有：清华大学笃实书院-数据驱动的个性化牙齿种植第一组</p>
+                    <p data-en="Peking University Second Clinic" data-zh="\"北京大学第二诊部\"">"北京大学第二诊部"</p>
+                    <p class="footer-rights" data-en="Rights: Tsinghua University Dushi College - Data-Driven Personalized Dental Implant Group 1" data-zh="\"版权所有：清华大学笃实书院-数据驱动的个性化牙齿种植第一组\"">"版权所有：清华大学笃实书院-数据驱动的个性化牙齿种植第一组"</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 北京大学第二诊部. All rights reserved.</p>
-                <p class="footer-quote">"北京大学第二诊部"</p>
+                <p>&copy; 2025 "北京大学第二诊部". All rights reserved.</p>
             </div>
         </div>
     </footer>
