--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
     </footer>
 
     <!-- Use reliable jsDelivr CDN with pinned version matching r128 (0.128.0) -->
+    <!-- noop: invisible change to force git update -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/DRACOLoader.js"></script>
